# test_agent

./: .env.tests  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PHASE1_PLAN.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  README.md  RETRY_IMPLEMENTATION_SUMMARY.md  TODO.md  compose.yaml  entrypoint.sh  pyproject.toml  report.json
.github/workflows/: ci.yml
architecture/: architecture.excalidraw
commands/: commit-fast.md  issue-create.md  issue-understand.md  pr-review.md  pr-update.md  task-implement.md
docs/: exception_handling_guide.md
evals/: README.md  conftest.py  llm_judge.py  pytest.ini  utils.py
evals/reports/: e2e_report_1752677317.json  e2e_report_1752677773.json  e2e_report_1752680180.json  enhance_report_1752671278.json  ir_report_1752673529.json  ir_report_1752673839.json  ir_report_1752673864.json  post_check_report_1752671173.json  pre_check_report_1752670205.json  pre_check_report_1752670947.json  pre_check_report_1752674320.json  sql_aggregate_report_1752699833.json  sql_construction_report_1752700390.json  sql_e2e_report_1752692909.json  sql_e2e_report_1752696142.json  sql_e2e_report_1752696553.json  sql_filter_report_1752699103.json  sql_grounding_report_1752700001.json  sql_join_report_1752699493.json  sql_join_report_1752699633.json  tool_agent_report_1752675896.json  (+6 more)
notebooks/: agent.ipynb  comparison.ipynb  data.ipynb  file_export.ipynb  id2name.ipynb  information.ipynb  llm_call.ipynb  name2id.ipynb  neighbors.ipynb  plot.ipynb
scripts/: setup_evaluation_db.py
tests/: conftest.py  mock_object.py  utils.py
(+157 files in other folders)
