[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.115.12",
    "instructor>=1.8.1",
    "jupyter>=1.1.1",
    "langfuse>=2.60.5",
    "litellm>=1.65.4.post1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nc-py-api>=0.20.2",
    "numpy>=2.2.5",
    "openinference-instrumentation-smolagents>=0.1.11",
    "opentelemetry-exporter-otlp>=1.33.0",
    "opentelemetry-sdk>=1.33.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "smolagents[telemetry]>=1.13.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]


[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
addopts = [
    "--ignore=evals",
]
env = [
    "EVALS_REPORT_DIR=evals/reports",
]
